--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ table {width: 100%;border-spacing: 0;}
 </head>
 
 <body bgcolor="#A2D4E6">
-<a href="HA.html"><img src="toptop.png" alt="" width="100%" height="300"></a>
+<a href="index.html"><img src="toptop.png" alt="" width="100%" height="300"></a>
 <div align="center">
   <table width="100%" style="#000000 solid;" border="0" bgcolor="#64B5D2">
     <tr>
