--- a/loginform.html
+++ b/loginform.html
@@ -164,7 +164,7 @@ body{
 </head>
 
 <body>
-<a href="HA.html"><img src="toptop.png" alt="" width="100%" height="300"></a>
+<a href="index.html"><img src="toptop.png" alt="" width="100%" height="300"></a>
 <div align="center">
   <table width="100%" style="#000000 solid;" border="0" bgcolor="#64B5D2">
     <tr>
