--- a/loginform.html
+++ b/loginform.html
@@ -169,11 +169,11 @@ body{
   <table width="100%" style="#000000 solid;" border="0" bgcolor="#64B5D2">
     <tr>
       <td width="5%" height="47" ><img src="new" width="50" height="43"/></td>
-      <td width="20%" height="47"><div align="center" class="style18"><a href="HA.html" style="text-decoration:none;"><font face="標楷體" color="#000000">最新商品</font><br></a></div></td>
+      <td width="20%" height="47"><div align="center" class="style18"><a href="index.html" style="text-decoration:none;"><font face="標楷體" color="#000000">最新商品</font><br></a></div></td>
       <td width="20%"><div align="center" class="style18"><a href="category1.html" style="text-decoration:none;" ><font face="標楷體" color="#000000">居家電器</font><br></a></div></td>
       <td width="20%"><div align="center" class="style18"><a href="category2.html" style="text-decoration:none;"><font face="標楷體" color="#000000">個人護理電器</font><br></a></div></td>
       <td width="20%"><div align="center" class="style18"><a href="category3.html" style="text-decoration:none;" ><font face="標楷體" color="#000000">空氣清潔電器</font><br></a></div></td>
-      <td width="15%" height="47" align="right"><a href="http://120.107.152.110/~a0418/HA/loginform.html" target="mainFrame"><img src="MemberImage" width="50" height="43" align="baseline" /></a><img src="cart" width="50" height="43" align="baseline" /><img src="search" width="50" height="43" /></td>
+      <td width="15%" height="47" align="right"><a href="loginform.html" target="mainFrame"><img src="MemberImage" width="50" height="43" align="baseline" /></a><img src="cart" width="50" height="43" align="baseline" /><img src="search" width="50" height="43" /></td>
     </tr>
   </table>
 </div>
@@ -209,8 +209,8 @@ body{
     <input type="reset" name="button2" id="button2" class="btn" value="重設" />
     </label>
     <label>
-    <p align="center"><a href="http://120.107.152.110/~a0418/HA/registerform.html" class="style5">註冊</a></p>
-    <p align="center"><a href="http://120.107.152.110/~a0418/HA/maloginform.html" class="style5">管理員登入</a></p>  
+    <p align="center"><a href="registerform.html" class="style5">註冊</a></p>
+    <p align="center"><a href="maloginform.html" class="style5">管理員登入</a></p>  
     </label>
   </p>
 </div></form>
